# hullowheel-server

./: .gitignore  CMakeLists.txt  README.md  build.sh  test.c
docs/: protocol.md
src/: gengetopt.cmdline  lib.c  lib.h  macrologger.h  main.c  mock.c  mock.h  server.c  server.h  udev.c  udev.h  wheel.c  wheel.h
